--- a/src/components/nav-bar/styles.css
+++ b/src/components/nav-bar/styles.css
@@ -5,7 +5,7 @@
   width: 100%;
   height: 80px;
   user-select: none;
-  padding: 0 101px;
+  padding: 0 100px;
   background-color: white;
   z-index: 100;
 }
@@ -21,6 +21,10 @@
   align-items: center;
   width: 100%;
   height: 100%;
+}
+
+.navbar .logo-container {
+  z-index: 1;
 }
 
 .nav {
