- Create Cart page - Change NavBar appearance like in a sample

--- a/src/components/nav-bar/components/cart/styles.css
+++ b/src/components/nav-bar/components/cart/styles.css
@@ -7,7 +7,7 @@
   position: relative;
 }
 
-.cart-symbol .counter {
+.cart-symbol .cart-counter {
   position: absolute;
   display: flex;
   justify-content: center;
