--- a/src/components/nav-bar/components/selector/styles.css
+++ b/src/components/nav-bar/components/selector/styles.css
@@ -1,4 +1,4 @@
-.selector {
+.cart-selector {
   display: flex;
   width: 100%;
   flex-direction: column;
@@ -6,27 +6,27 @@
   text-transform: capitalize;
 }
 
-.selector .attribute {
+.cart-selector .cart-attribute {
   display: flex;
+  height: 24px;
 }
 
-.selector .selector-button {
+.cart-selector .selector-button {
   border: 1px solid var(--black);
   background-color: #a6a6a6;
-  opacity: 40%;
+  opacity: 30%;
   cursor: pointer;
   text-transform: capitalize;
-  margin: 5px 0 0 0;
   height: 24px;
   min-width: 24px;
 }
 
-.selector .selector-button:hover {
+.cart-selector .selector-button:hover {
   background-color: #a6a6a6;
-  opacity: 60%;
+  opacity: 80%;
 }
 
-.selector .selected .selector-button {
+.cart-selector .selected .selector-button {
   background-color: white;
   cursor: default;
   opacity: 100%;
