--- a/src/components/nav-bar/components/cart-item/styles.css
+++ b/src/components/nav-bar/components/cart-item/styles.css
@@ -1,6 +1,6 @@
 .cart-item {
   display: flex;
-  margin-top: 20px;
+  margin-top: 40px;
 }
 
 .cart-item .count {
@@ -26,12 +26,12 @@
 
 .cart-item .count-button:hover {
   background-color: #a6a6a6;
-  opacity: 40%;
 }
 
 .cart-item .description {
   display: flex;
-  height: 100%;
+  justify-content: space-between;
+  min-height: 137px;
   flex-direction: column;
   flex-grow: 1;
 }
@@ -42,7 +42,7 @@
 
 .cart-item .description .price {
   font-weight: 500;
-  margin: 10px 0;
+  margin: 5px 0 7px 0;
 }
 
 .cart-item .photo {
