--- a/src/pages/products/styles.css
+++ b/src/pages/products/styles.css
@@ -1,9 +1,10 @@
-.products {
-  width: 100%;
-  max-width: 900px;
-  height: 100%;
-  min-height: 400px;
-  /* background-color: brown; */
+.products-page {
+  margin: 80px 100px 20px 100px;
+  display: flex;
+  flex-direction: column;
+}
+
+.products-page .category-name {
   font-size: 42px;
-  line-height: 160%;
+  text-transform: capitalize;
 }
