--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -30,3 +30,13 @@ li {
   flex: 1;
   list-style-type: none;
 }
+
+a {
+  cursor: default;
+  text-decoration: none;
+  color: var(--black);
+}
+
+img {
+  object-fit: contain;
+}
