--- a/src/components/cart-list/components/cart-item/styles.css
+++ b/src/components/cart-list/components/cart-item/styles.css
@@ -61,6 +61,14 @@
   display: flex;
   align-items: center;
   flex-grow: 0;
+  height: 185px;
+  width: 141px;
+  overflow: hidden;
+}
+
+.cartpage-item .cartitem-photo .cartphoto-frame {
+  display: flex;
+  transition: transform 0.5s ease-out;
 }
 
 .cartpage-item .cartitem-photo img {
@@ -84,4 +92,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.cartpage-item .prev-next-photoes .shadow-photo {
+  filter: drop-shadow(0px 0px 2px rgba(0, 0, 0, 1));
 }
