--- a/src/components/product-list/components/product/styles.css
+++ b/src/components/product-list/components/product/styles.css
@@ -3,10 +3,18 @@
   display: flex;
   padding: 16px;
   flex-direction: column;
-  justify-content: space-between;
   font-size: 18px;
   font-weight: 300;
   color: var(--black);
+  height: 444px;
+  width: 386px;
+  flex-grow: 0;
+  margin: 0 calc((100% - (3 * 386px)) / 6) 103px calc((100% - (3 * 386px)) / 6);
+}
+
+.list-product a {
+  height: 444px;
+  width: 386px;
 }
 
 .list-product:hover {
@@ -17,7 +25,7 @@
   opacity: 40%;
 }
 
-.list-product > img {
+.list-product .main-image {
   height: 330px;
   width: 354px;
 }
@@ -27,6 +35,7 @@
   right: 33%;
   bottom: 50%;
   text-transform: uppercase;
+  text-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
 }
 
 .list-product .name-price-container {
@@ -50,8 +59,19 @@
   cursor: pointer;
   justify-content: center;
   align-items: center;
+  visibility: hidden;
 }
 
-.list-product.out-of-stock .hidden-cart-symbol {
+.list-product .hidden-cart-symbol > * {
+  cursor: pointer;
+}
+
+.list-product:hover .hidden-cart-symbol {
+  visibility: visible;
+  opacity: 100%;
+}
+
+.list-product.out-of-stock .hidden-cart-symbol,
+.list-product.out-of-stock .hidden-cart-symbol > * {
   cursor: default;
 }
