--- a/src/pages/product/styles.css
+++ b/src/pages/product/styles.css
@@ -1,19 +1,20 @@
 .product-page {
-  margin: 80px 100px 72px 100px;
+  margin: 80px 219px 72px 100px;
   display: flex;
-  justify-content: space-between;
 }
 
 .product-page .product-photoes {
   display: flex;
   flex-direction: column;
   flex-grow: 0;
+  max-height: 511px;
 }
 
 .product-page .product-photoes .product-photo {
   width: 79px;
   height: 80px;
   margin-bottom: 40px;
+  cursor: pointer;
 }
 
 .product-page .product-photoes :last-child {
@@ -23,9 +24,98 @@
 .product-page .product-main-photo {
   width: 610px;
   height: 511px;
+  margin: 0 100px 0 40px;
+  flex-grow: 0;
 }
 
 .product-page .product-description {
   display: flex;
   flex-direction: column;
+  min-width: 292px;
+  flex-grow: 1;
+}
+
+.product-page .product-name {
+  font-size: 30px;
+}
+
+.product-page .product-attribute {
+  margin: 40px 0;
+}
+
+.product-page .product-attr-name {
+  text-transform: uppercase;
+  font-size: 18px;
+  font-weight: 700;
+}
+
+.product-page .product-attr-selectors {
+  display: flex;
+  flex-direction: row;
+  margin-top: 5px;
+}
+
+.product-page .product-attr-selector {
+  font-family: sans-serif;
+  font-size: 16px;
+  height: 45px;
+  min-width: 63px;
+}
+
+.product-page .product-attr-selector .product-attr-button {
+  background-color: white;
+  height: 45px;
+  min-width: 63px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.product-page .product-attr-selector .product-attr-button.selected {
+  background-color: var(--black);
+  opacity: 100%;
+  color: white;
+}
+
+.product-page .product-attr-selector .product-attr-button.fill-color {
+  opacity: 40%;
+}
+
+.product-page .product-attr-selector .product-attr-button:hover {
+  background-color: #a6a6a6;
+}
+
+.product-page .product-attr-selector .product-attr-button.selected:hover {
+  background-color: var(--black);
+  cursor: default;
+}
+
+.product-page .product-price {
+  text-transform: uppercase;
+  font-size: 18px;
+  font-weight: 700;
+  font-family: Roboto;
+}
+
+.product-page .product-price-amount {
+  margin-top: 15px;
+  font-size: 24px;
+  font-weight: 700;
+}
+
+.product-page .product-button {
+  margin-top: 25px;
+  border: none;
+  cursor: pointer;
+  text-align: center;
+  height: 52px;
+  width: 100%;
+  background-color: #5ece7b;
+  color: white;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+.product-page .product-description .description {
+  margin-top: 40px;
 }
