--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  font-family: Raleway, sans-serif;
+  font-family: Raleway, Roboto, sans-serif;
   font-style: normal;
   font-size: 16px;
   --black: #1d1f22;
