--- a/src/components/nav-bar/styles.css
+++ b/src/components/nav-bar/styles.css
@@ -5,9 +5,27 @@
   width: 100%;
   height: 80px;
   user-select: none;
-  padding: 0 100px;
+  padding: 0 10px;
   background-color: white;
   z-index: 100;
+}
+
+@media screen and (min-width: 500px) {
+  .navbar {
+    padding: 0 30px;
+  }
+}
+
+@media screen and (min-width: 872px) {
+  .navbar {
+    padding: 0 50px;
+  }
+}
+
+@media screen and (min-width: 1358px) {
+  .navbar {
+    padding: 0 100px;
+  }
 }
 
 .navbar .logo {
