--- a/src/pages/products/styles.css
+++ b/src/pages/products/styles.css
@@ -1,7 +1,25 @@
 .products-page {
-  margin: 80px 100px 20px 100px;
+  margin: 40px 10px 20px 10px;
   display: flex;
   flex-direction: column;
+}
+
+@media screen and (min-width: 500px) {
+  .products-page {
+    margin: 30px 30px 20px 30px;
+  }
+}
+
+@media screen and (min-width: 872px) {
+  .products-page {
+    margin: 50px 50px 20px 50px;
+  }
+}
+
+@media screen and (min-width: 1320px) {
+  .products-page {
+    margin: 80px 100px 20px 100px;
+  }
 }
 
 .products-page .category-name {
